--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1</title>
-    <h3>WElcome to my website</h3>
-    <h2>this link is for a security check like capcha</h2>
-    <a>href="https://konecna.vercel.app/">SecurityCheck</a>
-    <h1>click yes if the capcha worked and no if it didnt</h1>
-    <button>yes</button> <button>no</button>
-    <H3>thanks for testing my website and capcha</H3>
+    <title>Security Check</title>
 </head>
 <body>
-    
+    <h3>Welcome to my website</h3>
+    <h2>This link is for a security check like CAPTCHA</h2>
+    <a href="https://konecna.vercel.app/">Security Check</a>
+    <h1>Click "Yes" if the CAPTCHA worked and "No" if it didn't</h1>
+    <button onclick="alert('You clicked Yes!')">Yes</button>
+    <button onclick="alert('You clicked No!')">No</button>
+    <h3>Thanks for testing my website and CAPTCHA</h3>
 </body>
 </html>
