--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h3>Welcome to my website</h3>
-    <h2>This link is for a security check like CAPTCHA</h2>
+    <h2>This link is for a security check like CAPCHA</h2>
     <a href="https://konecna.vercel.app/">Security Check</a>
-    <h1>Click "Yes" if the CAPTCHA worked and "No" if it didn't</h1>
+    <h1>Click "Yes" if the CAPCHA worked and "No" if it didn't</h1>
     <button onclick="alert('You clicked Yes!')">Yes</button>
     <button onclick="alert('You clicked No!')">No</button>
-    <h3>Thanks for testing my website and CAPTCHA</h3>
+    <h3>Thanks for testing my website and CAPCHA</h3>
 </body>
 </html>
